--- a/TowerOfDaedalus_WebApp_DiscordBot/appsettings.json
+++ b/TowerOfDaedalus_WebApp_DiscordBot/appsettings.json
@@ -1,11 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "log4net.Config": "log4net.config",
-  "log4net.Config.Watch": "True",
   "AllowedHosts": "*"
 }
