--- a/TowerOfDaedalus_WebApp_Razor/TowerOfDaedalus_WebApp_Razor.csproj
+++ b/TowerOfDaedalus_WebApp_Razor/TowerOfDaedalus_WebApp_Razor.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="VRChat.API" Version="1.11.1" />
   </ItemGroup>
 
   <ItemGroup>
